<resources>
    <string name="app_name">MySocialApp</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="validate_password">Validate password</string>
    <string name="sign_up">Sign Up</string>
    <string name="poster_name">Posted by:</string>
    <string name="post_title">Post title</string>
    <string name="click_image">Click on the image to set a picture</string>
    <string name="post_description">Post description</string>
    <string name="location">Location:</string>
    <string name="post">Post</string>
</resources>
