<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".NewPostActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poster_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/post_title"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/postTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="@string/click_image"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <ImageButton
                android:id="@+id/imagePostImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher_round"
                android:scaleType="centerCrop"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/postLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/post_description"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/descriptionPostEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
            <Button
                android:id="@+id/postButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/post"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>