<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poster_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/postTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/post_title"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
    <ImageView
        android:id="@+id/postedImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round"/>
    <TextView
        android:id="@+id/postDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/post_description"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>
</LinearLayout>